# BenchmarkFcns

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  1-dimensional.md  2-dimensional.md  3-dimensional.md  CMakeLists.txt  CNAME  GEMINI.md  README.md  RECOMMENDED_FUNCTIONS.md  ROADMAP.md  TODO.txt  _config.yml  about.md  ads.txt  api.html  basic.py  basic_np_simd.py  basic_simd.py  benchmark_rastrigin.py  build_old.yaml  check_docstrings.py  compare_cpp_vs_numpy.py  continuous.md  convex.md  differentiable.md  examples.html  fcns.md  genindex.html  index.html  index.md  measure_speedup.py  multimodal.md  n-dimensional.md  non-convex.md  non-differentiable.md  non-scalable.md  (+21 more)
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  roadmap.doctree  usage.doctree
.github/workflows/: build.yaml  docs.yaml  pylint.yml
_includes/: ackleyfcn.m  ackleyn2fcn.m  ackleyn4fcn.m  adsense.markdown  adsense.md  alpinen1fcn.m  alpinen2fcn.m  bealefcn.m  bohachevskyn2fcn.m  boothfcn.m  brentfcn.m  brownfcn.m  carromtablefcn.m  deckkersaartsfcn.m  eggcratefcn.m  elattarfcn.m  forresterfcn.m  gramacyleefcn.m  happycatfcn.m  head.html  header.html  holdertablefcn.m  levin13fcn.m  periodicfcn.m  qingfcn.m  quarticfcn.m  ridgefcn.m  schwefel221fcn.m  schwefel223fcn.m  shubert3fcn.m  shubertfcn.m  sidebar.html  styblinskitankfcn.m  weierstrassfcn.m  wolfefcn.m  xinsheyangn1fcn.m  xinsheyangn2fcn.m  xinsheyangn3fcn.m  xinsheyangn4fcn.m
_layouts/: default.html  homepage.html  page.html
_modules/: index.html
_modules/benchmarkfcns/: composition.html  plotting.html
_posts/: 2016-08-11-welcome-to-jekyll.markdown
_sass/: _base.scss  _layout.scss
_sources/: api.rst.txt
abc/: FoodSources.m  abc.m
aro/: README.md  aro.m  aro_reproduce.m  arooptions.m  test_aro.m
benchmarkfcns/: .brentfcn.markdown.kate-swp  ackleyfcn.markdown  ackleyn2fcn.markdown  ackleyn3fcn.markdown  ackleyn4fcn.markdown  adjimanfcn.markdown  alpinen1fcn.markdown  alpinen2fcn.markdown  bartelsconnfcn.markdown  bealefcn.markdown  birdfcn.markdown  bohachevskyn1fcn.markdown  bohachevskyn2fcn.markdown  boothfcn.markdown  brentfcn.markdown  brownfcn.markdown  bukinn6fcn.markdown  contourfcn.markdown  crossintrayfcn.markdown  deckkersaartsfcn.markdown  dropwavefcn.markdown  easomfcn.markdown  eggcratefcn.markdown  exponentialfcn.markdown  goldsteinpricefcn.markdown  gramacylacyfcn.markdown  gramacyleefcn.markdown  griewankfcn.markdown  happycatfcn.markdown  himmelblaufcn.markdown  holdertablefcn.markdown  kealefcn.markdown  leonfcn.markdown  levin13fcn.markdown  matyasfcn.markdown  mccormickfcn.markdown  meshfcn.markdown  meshfcn.md  periodicfcn.markdown  powellsumfcn.markdown  (+30 more)
benchmarkfcns/plots/: brentfcn.m
benchmarks/: ackleyfcn.m  ackleyn3fcn.m  bealefcn.m  boothfcn.asv  boothfcn.m  brentfcn.m  brownfcn.m  bukinn6fcn.m  bulkinfcn.m  contourfcn.m  deckkersaartsfcn.m  easonfcn.m  eggcratefcn.m  eggcratefcnfcn.m  eggholderfcn.m  exponentialfcn.m  goldsteinprice.m  griewankfcn.m  himmelblaufcn.m  holdertablefcn.m  levin13fcn.m  matyasfcn.m  meshfcn.m  periodicfcn.m  pichenyfcn.m  qingfcn.m  rastriginfcn.m  ridgefcn.m  rosenbrockfcn.m  salomonfcn.m  schaffern1fcn.m  schaffern2fcn.m  schaffern4fcn.m  schwefel220fcn.m  schwefel222fcn.m  shubert4fcn.m  shubert6fcn.m  shubertfcn.m  spherefcn.m  styblinskitankfcn.m  (+3 more)
benchmarks/C++/: fcns.cpp
benchmarks/latex/: alpinen1fcn.tex  alpinen2fcn.tex  birdfcn.tex  brownfcn.tex  crossintrayfcn.tex  dropwavefcn.tex  easomfcn.tex  eggcratefcnfcn.tex  exponentialfcn.tex  gramacylacyfcn.tex  keanefcn.tex  periodicfcn.tex  ridgefcn.tex  rosenbrockfcn.tex  schaffern3fcn.tex  schwefel221fcn.tex  schwefelfcn.tex  shubert3fcn.tex  shubert6fcn.tex  styblinskitankfcn.tex  wolfefcn.tex  xinsheyangn4fcn.tex  zakharovfcn.tex
benchmarks/matlab/: alpinen1fcn.m  alpinen2fcn.m  birdfcn.m  boothfcn.m  brownfcn.m  crossintrayfcn.m  dropwavefcn.m  eggholderfcn.m  goldsteinpricefcn.m  griewankfcn.m  happycatfcn.m  matyasfcn.m  mccormickfcn.m  powellsumfcn.m  qingfcn.m  rosenbrockfcn.m  schwefel220fcn.m  schwefel222fcn.m  styblinskitankfcn.m  threehumpcamelfcn.m  xinsheyangn1fcn.m  xinsheyangn2fcn.m  xinsheyangn3fcn.m  zakharovfcn.m
benchmarks/python/: ackleyfcn.py  ackleyn2fcn.py  ackleyn3fcn.py  ackleyn4fcn.py  adjimanfcn.py  alpinen1fcn.py  alpinen2fcn.py  bartelsconnfcn.py  bealefcn.py  benchfunctions.py  birdfcn.py  bohachevskyn1fcn.py  bohachevskyn2fcn.py  boothfcn.py  brentfcn.py  brownfcn.py  bukinn6fcn.py  crossintrayfcn.py  deckkersaartsfcn.py  dropwavefcn.py  easomfcn.py  eggcratefcn.py  eggholderfcn.py  exponentialfcn.py  goldsteinpricefcn.py  gramacyleefcn.py  griewankfcn.py  happycatfcn.py  himmelblaufcn.py  holdertablefcn.py  keanefcn.py  leonfcn.py  levin13fcn.py  matyasfcn.py  mccormickfcn.py  periodicfcn.py  pichenyfcn.py  powellsumfcn.py  qingfcn.py  quarticfcn.py  (+25 more)
css/: main.scss
data/cec2014/: shuffle_17_D100.txt  (+53 more)
doc/: ackleyfcn.markdown  ackleyn2fcn.markdown  ackleyn3fcn.markdown  ackleyn4fcn.markdown  adjimanfcn.markdown  alpinen1fcn.markdown  alpinen2fcn.markdown  bartelsconnfcn.markdown  bealefcn.markdown  biggsexp02fcn.markdown  birdfcn.markdown  bohachevskyn1fcn.markdown  bohachevskyn2fcn.markdown  boothfcn.markdown  brentfcn.markdown  brownfcn.markdown  bukinn6fcn.markdown  carromtablefcn.markdown  contourfcn.markdown  crossintrayfcn.markdown  deckkersaartsfcn.markdown  dropwavefcn.markdown  easomfcn.markdown  eggcratefcn.markdown  elattarfcn.markdown  exponentialfcn.markdown  forresterfcn.markdown  goldsteinpricefcn.markdown  gramacyleefcn.markdown  griewankfcn.markdown  happycatfcn.markdown  himmelblaufcn.markdown  holdertablefcn.markdown  kealefcn.markdown  leonfcn.markdown  levin13fcn.markdown  matyasfcn.markdown  mccormickfcn.markdown  meshfcn.markdown  periodicfcn.markdown  (+32 more)
examples/: cmaes_integration.py  gym_integration.py  nevergrad_integration.py  optuna_integration.py  pymoo_integration.py  scipy_integration.py
scripts/: download_cec_data.py  embed_cec_data.py
src/: benchmarkfcns.h  main.cpp
(+879 files in other folders)
