[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"



[project]
name = "benchmarkfcns"
version = "3.5.0"
description = "A high-performant C++ implementation of benchmark functions for mathematical optimization algorithms."
readme = "README.md"
authors = [
  { name = "Mazhar Ansari Ardeh", email = "mazhar.ansari.ardeh@gmail.com" },
]

requires-python = ">=3.10"

dependencies = [
  "numpy >= 1.26, <3" # Updated to support NumPy 2.x
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
minimum-version = "0.10"
wheel.expand-macos-universal-tags = true
wheel.packages = ["src/python/benchmarkfcns"]
# Ensures metadata matches your project definition

[[tool.scikit-build.overrides]]
if.platform-system = "windows"
cmake.args = ["-A${SKBUILD_PLATFORM}"]

[tool.cibuildwheel]
test-command = "pytest {project}/src/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build-verbosity = 1

# --- Linting & Tests ---
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src/tests"]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]

[tool.ruff]
src = ["src"]
line-length = 88
